--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .packages
 .project
 .pub/
-build/
+/build/
 **/packages/
 
 # Files created by dart2js
@@ -25,3 +25,6 @@ doc/api/
 # Don't commit pubspec lock file 
 # (Library packages only! Remove pattern if developing an application package)
 pubspec.lock
+
+# WebStorm files
+.idea/
